Fixed too large titles

--- a/_sass/_c-elements.scss
+++ b/_sass/_c-elements.scss
@@ -61,26 +61,17 @@ h2 {
     font-size: 1.5rem;
 
     @media screen and (min-width: 60em), projection and (min-width: 60em) {
-        font-size: 2.25rem;
+        font-size: 1.5rem;
     }
 }
 
 h3,
 dt {
     font-size: 1.25rem;
-
-    @media screen and (min-width: 60em), projection and (min-width: 60em) {
-        font-size: 1.5rem;
-    }
 }
 
 h4 {
     font-size: 1rem;
-
-    @media screen and (min-width: 60em), projection and (min-width: 60em) {
-        font-size: 1.25rem;
-    }
-
     text-transform: uppercase;
     letter-spacing: 0.2em;
 }
